portfolio replcaed bt github

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
             <li class="main-nav__item">
               <a href="https://github.com/ejiogurobert" class="nav-link"
-                >View Portfolio</a
+                >Github</a
               >
             </li>
             <li class="main-nav__item main-nav__item--cta">
@@ -62,7 +62,7 @@
               <a href="#aboutme" onclick="hideSideBar()">About</a>
             </li>
             <li class="">
-              <a href="https://github.com/ejiogurobert">View Portfolio</a>
+              <a href="https://github.com/ejiogurobert">Github</a>
             </li>
             <li class="">
               <a href="files/robert_resume.pdf" download="">Download Resume</a>
