Changed about me write up

--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
         </div>
         <div class="about_essay">
           <p>
-            A web developer who believes in changing the world in his own way.
-            He's a Two(2)-time recognized National Award holder in Petroleum
-            Engineering. Holds a First class Bachelors degree in Petroleum
-            Engineering, Madonna University. He is passionate about programming
-            and currently on course to venture as frontend developer via Zuri
-            internship. Loves to be in an innovative environment as learning and
-            implementing new ideas are his key abilities.
+            A software engineer who believes in changing the world in his own
+            way. He's a Two(2)-time recognized National Award holder. Holds a
+            First class Bachelors degree in Petroleum Engineering, Madonna
+            University. He is passionate about programming and currently a
+            fellow at The Bulb Africa. Loves to be in an innovative environment
+            as learning and implementing new ideas are his key abilities.
           </p>
         </div>
       </section>
