Linked profile added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bobby</title>
+    <title>Robert's Portfolio</title>
     <link
       rel="shortcut icon"
       href="images/5-9-14-eyes-explained-featured-image-big-800x400.png"
@@ -23,9 +23,9 @@
         <nav class="main-nav">
           <ul class="main-nav__items">
             <li class="main-nav__item">
-              <a href="https://internship.zuri.team/" class="zuri"
+              <a href="http://www.linkedin.com/in/ejiogu-robert" class="zuri"
                 ><img
-                  src="images/Favicon.png"
+                  src="images/linkedinlogo.png"
                   class="zuri_logo"
                   alt="Zuri logo"
               /></a>
