changed job title

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a href="https://github.com/ejiogurobert">Github</a>
             </li>
             <li class="">
-              <a href="files/robert_resume.pdf" download="">Download Resume</a>
+              <a href="files/robert_resume.pdf" download="">Download CV</a>
             </li>
           </ul>
         </div>
@@ -76,7 +76,7 @@
         <div>
           <div>
             <h1>Hi, My name is Robert Ejiogu</h1>
-            <h2>A Frontend Developer</h2>
+            <h2>A Software Engineer</h2>
           </div>
         </div>
       </section>
