changed the download buttun to view button

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
               >
             </li>
             <li class="main-nav__item main-nav__item--cta">
-              <a href="files/robert_resume.pdf" class="nav-link" download=""
-                >Download Resume</a
+              <a
+                href="https://docs.google.com/document/d/1j7KRRPqOlTgiduTjF21u9dfoBJA72W50YJ7vzoXD3Qo/edit?usp=sharing"
+                class="nav-link"
+                download=""
+                >View Resume</a
               >
             </li>
           </ul>
@@ -65,7 +68,11 @@
               <a href="https://github.com/ejiogurobert">Github</a>
             </li>
             <li class="">
-              <a href="files/robert_resume.pdf" download="">Download CV</a>
+              <a
+                href="https://docs.google.com/document/d/1j7KRRPqOlTgiduTjF21u9dfoBJA72W50YJ7vzoXD3Qo/edit?usp=sharing"
+                download=""
+                >View Resume</a
+              >
             </li>
           </ul>
         </div>
